runs/2025-02-28-13-08-23/logs/GrafGen/build-success.log
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://p3m.dev/cran/__linux__/noble/latest
Bioconductor version 3.20 (BiocManager 1.30.25), R 4.4.2 (2024-10-31)
Installing package(s) 'GrafGen'
trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/GrafGen_1.2.0.tar.gz'
Content type 'application/x-gzip' length 3218454 bytes (3.1 MB)
==================================================
downloaded 3.1 MB

* installing *source* package ‘GrafGen’ ...
** package ‘GrafGen’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
using C++ compiler: ‘g++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c AncestrySnps.cpp -o AncestrySnps.o
AncestrySnps.cpp: In member function ‘int AncestrySnps::ReadAncestrySnpsFromFile(std::string, int)’:
AncestrySnps.cpp:43:15: error: ‘error’ was not declared in this scope; did you mean ‘perror’?
   43 |     if (!ifp) error("ERROR: Couldn't open genotype file");
      |               ^~~~~
      |               perror
make: *** [/usr/local/lib/R/etc/Makeconf:204: AncestrySnps.o] Error 1
ERROR: compilation failed for package ‘GrafGen’
* removing ‘/mnt/library/GrafGen’

The downloaded source packages are in
	‘/tmp/RtmpgZo39d/downloaded_packages’
Old packages: 'bslib', 'cli', 'curl', 'evaluate', 'httr2', 'jsonlite',
  'openssl', 'pillar', 'pkgbuild', 'processx', 'ps', 'purrr', 'R6', 'Rcpp',
  'rlang', 'sessioninfo', 'systemfonts', 'testthat', 'textshaping', 'tinytex',
  'xfun', 'zip', 'class', 'foreign', 'KernSmooth', 'MASS', 'Matrix', 'nlme',
  'nnet', 'rpart', 'spatial'
Warning message:
In install.packages(...) :
  installation of package ‘GrafGen’ had non-zero exit status
Error: unexpected 'else' in "  else"
Execution halted

real	0m58.987s
user	0m7.437s
sys	0m2.198s
